Use flexbox progress bar to prevent word overflow

--- a/less/components/idresolver.less
+++ b/less/components/idresolver.less
@@ -4,6 +4,37 @@
 @import "../layouts/input-dashed-style";
 
 
+.flex-progressbar {
+    display: flex;
+    flex-direction: row;
+    min-height: 20px;
+    width: 100%;
+    background-color: black;
+    font-size: 12px;
+    border-radius: 4px;
+    overflow: hidden;
+    .bar {
+        flex: 1 0;
+        display: flex;
+        justify-content: center;
+        padding: 4px;
+        white-space: nowrap;
+        -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+        box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+        &.success {
+            background-color: #5cb85c;
+            color: white;
+        }
+        &.warning {
+            background-color: #ef8c00;
+            color: white;
+        }
+        &.danger {
+            background-color: #b80000;
+            color: white;
+        }
+    }
+}
 
 .wizard {
 
